# attention.rs

./: Cargo.toml
src/: flashinfer.rs  fp8_linear.rs  fused_rope.rs  gdn.rs  lib.rs  mamba_cache.rs  mla.rs  moe.rs  mxfp4_linear.rs  nvfp4_linear.rs  paged_attention.rs  (+7 more)
src/kernels/: Cargo.toml  build.rs  trtllm_artifacts.rs
src/kernels/src/: concat_and_cache_mla_kernel.cu  ffi.rs  flashinfer_adapter.cu  flashinfer_adapter_decode.cu  flashinfer_adapter_fp8.cu  flashinfer_adapter_prefill.cu  flashinfer_bmm_fp8.cu  flashinfer_common.cuh  flashinfer_fp8_qquant.cu  flashinfer_mla.cu  flashinfer_moe_adapter.cu  fp8_gemm_cutlass.cu  fp8_moe_cutlass.cu  fused_rope.cu  gdn.cu  gptoss_swiglu.cu  mla_paged_attention.cu  moe_gemm_wmma.cu  moe_gemv.cu  moe_wmma_gguf.cu  mxfp4_gemm.cu  mxfp4_gemm_cutlass.cu  mxfp4_gemm_wmma.cu  mxfp4_quant.cu  nvfp4_gemm.cu  nvfp4_gemm_cutlass.cu  nvfp4_gemm_flashinfer.cu  nvfp4_moe_cutlass.cu  nvfp4_quant.cu  paged_attention_v1.cu  paged_attention_v2.cu  pagedattention.cuh  prefill_paged_attn.cu  prefill_paged_attn_opt.cu  reshape_and_cache_kernel.cu  silu_and_mul.cu  update_kvscales.cu
src/kernels/src/attention/: dtype_fp8.cuh
src/kernels/src/moe/: moe_utils.cuh
src/kernels/src/trtllm/: trtllm_batched_gemm_runner.cu  trtllm_cutlass_heuristic.cpp  trtllm_fused_moe_dev_kernel.cu  trtllm_fused_moe_routing_common.cu  trtllm_fused_moe_routing_custom_block.cu  trtllm_fused_moe_routing_custom_cluster.cu  trtllm_fused_moe_routing_deepseek.cu  trtllm_fused_moe_routing_llama4.cu  trtllm_fused_moe_routing_renormalize.cu  trtllm_fused_moe_runner.cu
(+10 files in other folders)
