[package]
name = "kernels"
version = "0.4.0"
edition = "2021"
description = "Paged attention kernels for Rust"
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]

[build-dependencies]
cudaforge = "0.1.1"
anyhow = { version = "1", features = ["backtrace"] }

[features]
no-marlin = []
no-fp8-kvcache = []
cutlass = []
flashinfer = []
